# netbox-inventory-plus

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yaml  release.yml  test.yml
netbox_inventory/: __init__.py  filtersets.py  navigation.py  object_actions.py  signals.py  tables.py  template_content.py  urls.py  utils.py
netbox_inventory/api/: views.py
netbox_inventory/forms/: bulk.py  create.py  filters.py  models.py
netbox_inventory/graphql/: __init__.py  filters.py  schema.py  types.py
netbox_inventory/migrations/: 0019_asset_eol_date.py  0020_asset_storage_site_delivery_delivery_site_and_more.py  0020_purchase_delivery_instructions.py
netbox_inventory/models/: assets.py  deliveries.py
netbox_inventory/templatetags/: bulk_scan_button.py
netbox_inventory/tests/: test_load.py
netbox_inventory/views/: __init__.py  asset.py  asset_create.py  bom.py  bulk_assign.py  courier.py  create_and_assign.py  overview.py  supplier.py
netbox_inventory_plus/: __init__.py  navigation.py  object_actions.py  signals.py  tables.py  template_content.py  urls.py  utils.py
netbox_inventory_plus/api/: urls.py
netbox_inventory_plus/forms/: assign.py  bulk.py  create.py  models.py  reassign.py  widgets.py
netbox_inventory_plus/migrations/: 0001_initial.py  0001_initial_prod.py  0001_squashed_0020_asset_storage_site_delivery_delivery_site_and_more.py  0002_alter_asset_serial.py  0003_add_inventoryitemgroup.py  0004_inventoryitemgroup_tree.py  0005_delivery_asset_delivery.py  0009_add_rack.py  (+15 more)
testing/: configuration.testing.py
(+73 files in other folders)
