[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-inventory-plus"
version = "3.7.0"
authors = [
  { name="Sol1", email="support@sol1.com.au" },
]
description = "Inventory asset management in NetBox"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["netbox", "netbox-plugin", "inventory"]

[project.urls]
"Homepage" = "https://github.com/sol1/netbox-inventory-plus/"
"Bug Tracker" = "https://github.com/sol1/netbox-inventory-plus/issues/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_inventory_plus*"]

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "W", "C"]
ignore = ["F403", "F405"]

[tool.ruff.format]
quote-style = "single"

[tool.isort]
profile = "black"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "NETBOX",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_first_party = ["netbox_inventory_plus"]
known_netbox = [
    "netbox",
    "core",
    "dcim",
    "extras",
    "tenancy",
    "users",
    "utilities",
]